<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.outofprintmagazine</groupId>
	<artifactId>oopcorenlp_corpus_cli</artifactId>
	<version>1.0</version>
	<name>OOP Core NLP Corpus CLI</name>
	<description>CLI interface to oopcorenlp_corpus library</description>
	<url>https://beta.outofprintmagazine.io</url>

	<licenses>
		<license>
			<name>GPL-3.0-or-later</name>
			<url>https://www.gnu.org/licenses/gpl-3.0-standalone.html</url>
		</license>
	</licenses>
	<organization>
	    <name>Out Of Print Magazine</name>
	    <url>http://beta.outofprintmagazine.io</url>
	</organization>
	<developers>
		<developer>
      		<id>rsadasiv</id>
      		<name>Ram Sadasiv</name>
      		<email>io.outofprintmagazine@gmail.com</email>
		</developer>
	</developers>
	<scm>
		<url>https://github.com/rsadasiv/oopcorenlp_corpus_cli.git</url>
	</scm>
	<issueManagement>
		<system>Github</system>
		<url>https://github.com/rsadasiv/oopcorenlp_corpus_cli.git/</url>
	</issueManagement>
	
	<properties>
		<oopcorenlp.version>1.0</oopcorenlp.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
		<java.release.version>11</java.release.version>
		<java.version>1.8</java.version>
		<maven-shade-plugin.version>3.2.3</maven-shade-plugin.version>
		
		<maven-site-plugin.version>3.9.1</maven-site-plugin.version>
		<maven-fluido-skin.version>1.9</maven-fluido-skin.version>
		<maven-project-info-reports-plugin.version>3.1.0</maven-project-info-reports-plugin.version>
		<maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>		
		<doxia-site-renderer.version>1.9.2</doxia-site-renderer.version>

		<!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
		<commons-cli.version>1.4</commons-cli.version>
		
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-properties -->
		<jackson.version>2.11.0</jackson.version>
		

	</properties>
	
	<dependencies>
		
		<dependency>
			<groupId>io.outofprintmagazine</groupId>
			<artifactId>oopcorenlp_corpus</artifactId>
			<version>${oopcorenlp.version}</version>
		</dependency>
		
		<dependency>
		    <groupId>commons-cli</groupId>
		    <artifactId>commons-cli</artifactId>
		    <version>${commons-cli.version}</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
		<dependency>
		    <groupId>commons-codec</groupId>
		    <artifactId>commons-codec</artifactId>
		    <version>1.14</version>
		</dependency>
		
		
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${jackson.version}</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-properties</artifactId>
			<version>${jackson.version}</version>
		</dependency>		
		
	</dependencies>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<!-- <release>${java.release.version}</release> -->
				    <source>${java.version}</source>
				    <target>${java.version}</target>					
				</configuration>
			</plugin>	
	      	
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>${maven-shade-plugin.version}</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<filters>
								<filter>
									<artifact>*:*</artifact>
									<excludes>
										<exclude>META-INF/*.SF</exclude>
										<exclude>META-INF/*.DSA</exclude>
										<exclude>META-INF/*.RSA</exclude>
									</excludes>
								</filter>
							</filters>						
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>io.outofprintmagazine.corpus.App</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>${maven-site-plugin.version}</version>
				<dependencies>
					<dependency>
            			<groupId>org.apache.maven.skins</groupId>
            			<artifactId>maven-fluido-skin</artifactId>
            			<version>${maven-fluido-skin.version}</version>
          			</dependency>
					<dependency>
					    <groupId>org.apache.maven.doxia</groupId>
					    <artifactId>doxia-site-renderer</artifactId>
					    <version>${doxia-site-renderer.version}</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>

	</build>
	
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>${maven-project-info-reports-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven-javadoc-plugin.version}</version>
		        <reportSets>
		          <reportSet>
		            <reports>
						<report>javadoc-no-fork</report>
						<report>test-javadoc-no-fork</report>
		            </reports>
		          </reportSet>
		         </reportSets>				
	      	</plugin>
		</plugins>
	</reporting>
</project>